# eros_ai

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore
backend/app/: main.py
backend/app/api/v1/: dashboard.py  memory.py  voice.py
backend/app/core/: decision_engine.py  response_streamer.py
backend/app/memory/: cold_memory.py  retrieval.py
backend/app/models/: memory.py
backend/app/pipelines/: diary_writer.py  memory_curation.py  personality_update.py
backend/app/schemas/: dashboard.py  memory.py  voice.py
backend/app/voice/: filler.py  token_service.py
backend/scripts/: check_provider_connectivity.py  seed_dashboard_dummy_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_flow.py  test_cors.py  test_dashboard_flow.py  test_pipelines_flow.py  test_session_flow.py  test_voice_flow.py
backend/tests/unit/: test_chat_pipeline.py  test_db_models.py  test_pipelines.py  test_voice_token_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: dashboard-components.tsx  dashboard-experience.tsx  page.tsx
frontend/app/diary/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/voice/: page.tsx
frontend/lib/: api.ts  auth.ts  chat-store.tsx
voice-agent/: .env.example  pyproject.toml
voice-agent/scripts/: check_deepgram.py
voice-agent/src/: agent.py  logging_utils.py  session_bridge.py
voice-agent/tests/: test_agent.py
(+1 files in other folders)
